--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,14 +1,17 @@
 .section {
-  max-width: 1000px;
+  background-color: rgba(243, 204, 154, 0.208);
+  padding: 30px;
+  max-width: 700px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  border-radius: 30px;
 }
 .title {
+  margin: 10px;
   font-size: 30px;
   font-weight: bold;
   padding: 15px 30px;
