--- a/src/components/Statistics/Statistic.module.css
+++ b/src/components/Statistics/Statistic.module.css
@@ -1,4 +1,5 @@
 .list {
+  margin: 0;
   width: 100%;
   max-width: 300px;
   list-style: none;
@@ -20,18 +21,18 @@
 
 .negativeSpan {
   padding: 5px;
-  border-radius: 5px;
+  border-radius: 10px;
   background-color: rgba(216, 166, 73, 0.616);
 }
 .neutralSpan {
   padding: 5px;
-  border-radius: 5px;
+  border-radius: 10px;
   background-color: rgba(73, 111, 216, 0.616);
 }
 
 .positiveSpan {
   padding: 5px;
-  border-radius: 5px;
+  border-radius: 10px;
 
   background-color: rgba(125, 216, 73, 0.616);
 }
